--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,14 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BandarmoloNY</title>
-    <link rel="icon" type="image/png" href="%VITE_SUPABASE_URL%/storage/v1/object/public/assets/images/logo_bandarmolony.png" />
-    <link rel="apple-touch-icon" href="%VITE_SUPABASE_URL%/storage/v1/object/public/assets/images/logo_bandarmolony.png" />
     <!-- Midtrans Snap.js -->
     <script type="text/javascript" src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="%VITE_MIDTRANS_CLIENT_KEY%"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
     <script>
       // Clear service worker cache and force refresh
       console.log('🔄 Clearing service worker and cache...');
