--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Cache-Control" content="public, max-age=31536000, immutable" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <title>BandarmoloNY</title>
+    <!-- Preload logo for better performance -->
+    <link rel="preload" as="image" href="https://bandarmolony.supabase.co/storage/v1/object/public/assets/images/logo_bandarmolony.png" />
     <!-- Midtrans Snap.js -->
     <script type="text/javascript" src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="%VITE_MIDTRANS_CLIENT_KEY%"></script>
   </head>
