--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,10 @@
     <meta http-equiv="Cache-Control" content="public, max-age=31536000, immutable" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <title>BandarmoloNY</title>
+    <!-- Google Fonts - Inter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Preload logo for better performance -->
     <link rel="preload" as="image" href="https://bandarmolony.supabase.co/storage/v1/object/public/assets/images/logo_bandarmolony.png" />
     <!-- Midtrans Snap.js -->
